refactor: fields selector & basic access control
